Fixed spacing between event date objects in the event list.

--- a/src/app/calendar-event-date/calendar-event-date.component.css
+++ b/src/app/calendar-event-date/calendar-event-date.component.css
@@ -1,6 +1,3 @@
-.calendar-content  h2:not(:nth-of-type(1)) { margin-top: 75px; }
-
-.calendar-content h2:first-of-type{ margin-top: 0 }
 
 h2.group-title {
   font-size: 30px;
